<resources>
    <string name="app_name">AndroidTask</string>

    <string name="search">Search</string>
    <string name="log_out">Log Out</string>
    <string name="ok">OK</string>

    <string name="map">Map</string>
    <string name="countries">Countries</string>
    <string name="contact">Contact</string>
    <string name="search_capitals">world\'s capital cities</string>
    <string name="no_permission">Permission Denied</string>
    <string name="no_permission_msg">The app can\'t function properly without the permission</string>

    <string name="user_name_txt">User name</string>
    <string name="name_txt">name</string>
    <string name="password_txt">Password</string>
    <string name="email_txt">Email</string>
    <string name="login_txt">Login</string>
    <string name="register_btn">Register</string>
    <string name="mobile_txt">Mobile</string>
    <string name="register_txt">No account yet? Create one</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

    <string name="password_error">Enter a valid password more than 2 alphanumeric characters</string>
    <string name="user_name_error">Enter a valid user name</string>
    <string name="name_error">Enter a valid  name</string>
    <string name="email_error">Enter a valid email address</string>
    <string name="network">No network connection available.</string>
    <string name="login_error">Incorrect username or password</string>
    <string name="loading">Loading....</string>

    <string name="facebook_app_id">1950937755160091</string>
    <string name="fb_login_protocol_scheme">fb1950937755160091</string>

</resources>
